samples/_failures_safe/1761647665_583b75_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_1a7ba2dc.c: In function ‘main’:
./samples/SAFE/__tmp_1a7ba2dc.c:163:5: error: expected declaration or statement at end of input
  163 |     }
      |     ^
